# sqlite-log-handler-template

./: .gitignore  README.md  pyproject.toml
examples/: logs_command.py
sqlite_log_handler/: __init__.py  log_handler.py  setup_logging.py
